- Colors are computed - Improved layout choices - Componentry for the HUD - Hud has positioning

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,8 @@
     "Promise": "readonly",
     "Set": "readonly",
     "Map": "readonly",
-    "WeakMap": "readonly"
+    "WeakMap": "readonly",
+    "globalThis": "readonly"
   },
   "plugins": [
     "import"
