--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "its-not-a-truck",
   "version": "1.0.0",
   "description": "Test tube sort puzzle (it's a series of tubes)",
-  "browser": "src/index.html",
+  "browser": "docs/index.html",
   "scripts": {
-    "start": "npx http-serve src"
+    "start": "npx http-serve docs"
   },
   "author": "Bryan Elliott <fordiman@gmail.com> (https://fordi.org)",
   "license": "ISC",
@@ -12,6 +12,11 @@
     "eslint": "^8.16.0",
     "eslint-config-recommended": "^4.1.0",
     "eslint-import-resolver-typescript": "^3.5.1",
-    "eslint-plugin-import": "^2.26.0"
+    "eslint-plugin-import": "^2.26.0",
+    "xmldom": "^0.6.0"
+  },
+  "dependencies": {
+    "color-space": "^2.0.0",
+    "dom-parser": "^0.1.6"
   }
 }
