--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "its-not-a-truck",
+  "name": "org.fordi.its_not_a_truck",
   "version": "1.0.0",
   "description": "Test tube sort puzzle (it's a series of tubes)",
   "browser": "docs/index.html",
@@ -9,6 +9,7 @@
   "author": "Bryan Elliott <fordiman@gmail.com> (https://fordi.org)",
   "license": "ISC",
   "devDependencies": {
+    "cordova-android": "^12.0.1",
     "eslint": "^8.16.0",
     "eslint-config-recommended": "^4.1.0",
     "eslint-import-resolver-typescript": "^3.5.1",
@@ -18,5 +19,10 @@
   "dependencies": {
     "color-space": "^2.0.0",
     "dom-parser": "^0.1.6"
+  },
+  "cordova": {
+    "platforms": [
+      "android"
+    ]
   }
 }
